[gd_scene load_steps=5 format=3 uid="uid://3046lgay8fu8"]

[ext_resource type="PackedScene" uid="uid://dgi3541b0t7ph" path="res://objects/GameCamera.tscn" id="1_0ykhv"]
[ext_resource type="Script" uid="uid://g0oy4pn8nqkb" path="res://components/scene_managers/main_menu_manager.gd" id="1_2wh52"]
[ext_resource type="PackedScene" uid="uid://dyafskg3ggf6v" path="res://objects/Environment.tscn" id="1_yqorp"]

[sub_resource type="LabelSettings" id="LabelSettings_0ykhv"]
font_size = 28

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_2wh52")

[node name="GameCamera" parent="." instance=ExtResource("1_0ykhv")]

[node name="WorldEnvironment" parent="." instance=ExtResource("1_yqorp")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="Control/CenterContainer"]
layout_mode = 2
text = "UMBRAL DAWN"
label_settings = SubResource("LabelSettings_0ykhv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 360.0
offset_right = 1280.0
offset_bottom = 600.0

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="PlayButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="QuitButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "QUIT"

[connection signal="pressed" from="HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
